infra/k8s/races-saga-orchestrator-depl.yaml
#section that create the deployment and the pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: races-saga-orchestrator-depl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: races-saga-orchestrator
  template: 
    metadata:
      labels:
        app: races-saga-orchestrator
    spec:
      containers:
        - name: races-saga-orchestrator
          image: ahmed0ahmed/racer-races-saga-orchestrator
          imagePullPolicy : IfNotPresent
---
#kubernets service cluesterip so we can acess the pod
#default service is clusterip service that why we didint have to
#specifie it
apiVersion: v1
kind: Service
metadata: 
  name: races-saga-orchestrator-srv
spec: 
  selector:
    app: races-saga-orchestrator
  ports:
    - name: races-saga-orchestrator
      protocol: TCP
      port: 3000
      targetPort: 3000
